--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,16 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js") 
+
   body
+    nav.navbar.navbar-dark.bg-dark
+      div.container-fluid
+        a.navbar-brand(href="#") Youno
+        ul.nav.navbar-nav
+          li.nav-item.active: a.nav-link.active(href="#") Home
+          li.nav-item: a.nav-link(href="#") Play Now
+
     block content
