--- a/public/stylesheets/game_room.css
+++ b/public/stylesheets/game_room.css
@@ -1,172 +1,234 @@
 body {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
+    height: 92.25vh;
 }
 
-.page-content {
-    display: flex;
-    flex-direction: row;
+/* ================================================================================ */
+/* Game Layout */
+/* ================================================================================ */
+
+.game-container {
     flex-grow: 1;
-
-    width: 100%;
-    height: 100%;
+    padding: 0px;
 }
-
 .game {
-    display: block;
-    height: 100%;
-    flex-grow: 1;
+    margin: 0px;
+    padding: 0px;
     background-color: lightgrey;
 }
 
+
+.top {
+    flex-grow: 0.5;
+    background-color: red;
+}
+
+.middle {
+    flex-grow: 1;
+}
+
+.middle .col-sm {
+    padding: 0px;
+    max-height: 100%;
+}
+
+.row .col-sm-6 {
+    padding: 0px;
+}
+
+.center {
+    background-color: chartreuse;
+}
+
+.bottom {
+    flex-basis: 150px;
+    flex-grow: 0.5;
+    background-color: violet;
+    margin: 0px;
+}
+
+.bottom .container-fluid {
+    padding: 0px;
+}
+
+.bottom .container-fluid .row .col {
+    margin: 0px;
+    padding: 0px;
+}
+
+/* ================================================================================ */
+/* Game Elements */
+/* ================================================================================ */
+
+.my-card {
+    box-sizing: border-box;
+    display: block;
+
+    height: 100px;
+    width: 64px;
+
+
+    margin: 8px;
+    padding: 0px;
+    border-radius: 10px;
+
+    background-color: inherit;
+
+    transition: transform .2s;
+
+    cursor: pointer;
+}
+
+.my-card:hover {
+    transform: scale(1.6);
+}
+
+.middle .center {
+    padding: 0px;
+}
+
+#game-center {
+    padding: 0px;
+}
+
+#game-center .row {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+}
+
+.face-up {
+    border-radius: 6px;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.face-down {
+    display: block;
+    height: auto;
+    width: 100%;
+    object-fit: cover;
+
+}
+
+.deck {
+    cursor: pointer;
+
+    padding: 0px;
+
+    z-index: 1000;
+}
+
+#draw {
+    margin: 0px;
+    top: 0px;
+    left: 0px;
+}
+
+
+
+.user-hand {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.user-hand .my-card {
+    margin: 2px;
+    max-height: 60px;
+    max-width: 32px;
+}
+
+
+.user-hand .my-card:hover {
+    
+    transform: scale(2.75);
+}
+
+.user-hand .face-down {
+    height: 100%;
+
+    object-fit: contain;
+}
+
+
+#top-player {
+    flex-wrap: wrap-reverse;
+}
+
+.side-player {
+    padding: 0px 20px;
+}
+
+.side-player .my-card {
+    transform: rotate(90deg);
+}
+
+#left-player .my-card .face-down {
+    /* max-height: 400px; */
+}
+/* ================================================================================ */
+/* Chat-sidebar*/
+/* ================================================================================ */
+
 .chat-sidebar {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column;
     
     height: 100%;
     min-width: 200px;
-    max-width: 350px;
-    flex-grow: 0.25;
+    max-width: 350px; */
+    /* flex-grow: 0.25; */
 
+    padding: 0px;
 
-    padding-left: 4px;
-
-
-    border-top: 1px solid grey;
-
-    background-color: blue;
+    border-top: 0.5px solid grey;
 }
-/* ================================================== */
-/* Chat-title-box and descendants */
-/* ================================================== */
+
+#chat-sidebar-closed {
+    max-width: 50px;
+    padding: 0px;
+
+    border-top: 0.5px solid grey;
+}
+
 .chat-title-box {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
+    border-bottom: 1px solid grey;
+    padding: 8px 16px;
+}
 
-    flex-basis: 50px;
-    flex-grow: 0.01;
-
-    align-items: flex-start;
-
-    padding: 8px;
-
-    
-
+.chat-close-container {
+    margin-right: 8px;
+    padding: 0px;
 }
 
 .chat-title {
     display: block;
-
-    flex-grow: 1;
-    
-    color: white;
+    color: #fff;
 }
 
-
-.chat-close-btn {
-    display: block;
-    width: 45px;
-    height: 100%;
-
-    padding: 0px;
-    
-
-    text-align: center;
-    font-size: 28px;
-
-    color: white;
-}
-
-.chat-close-btn:hover {
-    cursor: pointer;
-    background-color: rgb(40, 44, 48);
-    /* bg-dark rgb code */
-    /* background-color: rgb(33, 37, 41); */
-}
-
-.chat-close-btn-x {
-    padding: 0px;
-    margin: 0px;
-
-    line-height: 35px;
-    font-weight: bold;
-}
-
-/* ================================================== */
-/* Chat-content and descendants */
-/* ================================================== */
-
-.chat-content {
-    flex-grow: 1;
-    background-color: lightgrey;
-
-    overflow-y: auto;
-}
-
-/* ================================================== */
-/* Chat-box and descendants */
-/* ================================================== */
-
-.chat-box {
-    box-sizing: border-box;
-    display: flex;
-
-    flex-direction: column;
-    flex-basis: 75px;
-    flex-grow: 0.05;
-    
-    justify-content: space-between;
-    align-items: flex-end;
-
-    border-top: 2px solid grey;
-
+.chat-message-box {
     padding: 8px;
+    padding-top: 16px;
+    border-top: 1px solid grey;
 }
 
-.message-box-container {
-    width: 100%;
-    padding-bottom: 8px;
-}
-
-.message-box {
-    box-sizing: border-box;
-    display: block;
-
-    height: 100%;
-    width: 100%;
-
-    overflow: hidden;
-    white-space: wrap;
-
-    padding: 8px;
-
-    flex-grow: 1;
-
-    border-radius: 6px;
-
-    background-color: lightgrey;
-}
-
-.send-btn {
-    box-sizing: border-box;
-    display: block;
-
-    height: 32px;
-    width: 64px;
-
-    border-radius: 8px;
-    border: 0px;
-
-    font-size: 16px;
-    font-weight: 500;
-
-    text-align: center;
-
+.open-chat {
+    padding-left: 16px;
+    font-size: 24px;
     color: white;
-    background-color: #51a0d5;
+}
 
-    box-shadow: none;
+.open-chat:hover {
+    color: white;
+}
 
+.hidden {
+    display: none;
 }
