--- a/views/login.pug
+++ b/views/login.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
- form.Form(action='/',method='post')
+ form.Form(action='/api/auth/login',method='post')
     label 
      h1 Login 
      section.wel 
@@ -11,11 +11,11 @@ block content
         section 
             label Username 
             br
-            input(type='text' placeholder='john')
+            input(type='text' placeholder='john', name="username")
         section.psec 
             label Password 
             br
-            input(type='password')
+            input(type='password', name="password")
 
             
      div.newAccbtn
