layout view now uses active session, implemented login and register views with bootstrap classes

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -11,7 +11,7 @@
   background-size: stretch;
   position: flex;
 } */
-.Form {
+/* .Form {
   border-color: black;
   border-style: ridge;
   width: 400px;
@@ -79,4 +79,4 @@ a:visited {
 }
 .loginBtn {
   margin-left: 156px;
-}
+} */
