Finished Game ORM/Controller, Added Dashboard Rendering
- Implemented basic Game ORM and Controller
- Added game route
- Refactored dashboard.pug so that the UI is more responsive, added
  chat, and added rendering for game data from database.
- In chat, added example messages with all of the styling taken care of
- Removed "Join Game" button, may readd later if we have time to
  implement public/private rooms
- Turned "Create Room" btn to an anchor tag with the href routed to the
  create-game route. Now if you click "Create Room", a new game will be
  created and you will be redirected back to the /game dashboard and see
  that a new game was added as a card.
- Still need to add some styling for the game cards

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -69,7 +69,6 @@ a:link,
 a:visited {
   color: black;
   text-decoration: none;
-  cursor: auto;
 }
 
 .help {
@@ -79,4 +78,8 @@ a:visited {
 }
 .loginBtn {
   margin-left: 156px;
+}
+
+.navbar-brand {
+  cursor: pointer;
 }
