implemented chat scripts

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -30,6 +30,7 @@ block content
             .chatroom.bg-dark
                 .chatroom-title-container
                     .chatroom-title Global Chat
+                    input(type="hidden", id="chatId", name="chatId" value="lobby")
                 .chatbox
                     .chat-message-container 
                         .chat-message-time 12:00
