--- a/views/login.pug
+++ b/views/login.pug
@@ -21,7 +21,7 @@ block content
                 label(for="passwordInput") Password
                 input.form-control(required, id="passwordInput" type='password', placeholder="Password", name="password")
               br
-              button.btn.btn-success(id="login-btn" type="submit") Login
+              button.btn.btn-primary(id="login-btn" type="submit") Login
               a.card-text.p-3(href="/register") Don't have an account? Sign up
 //-   form.Form(action='/api/auth/login',method='post')
 //-     label 
