Added Data Insert DB Migration, Fixed Routing in Home Page
- Added 'Base Deck' bulk data insert migration
- Fixed home page button to redirect to '/game' (the game dashboard)
- Added placeholders for Players in lobby and Open/Closed in Game Cards
- Fixed Global chat in Dashboard so it starts at the top of the flex box
  instead of the bottom
- Added the isAuth middleware to the game.js Route
- Commented/Noted the values of the special cards in the UNO deck in
  game.js Database

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -1,3 +1,7 @@
+/* =============================================================================== */
+/* Main layout/titles and Create Game Room buttons */
+/* =============================================================================== */
+
 .maindiv {
   box-sizing: border-box;
   display: flex;
@@ -9,7 +13,6 @@
 
   
   font-family: Aleo;
-  font-style: italic;
   font-weight: bold;
   font-size: 20px;
   color: #000000;
@@ -49,28 +52,10 @@
 }
 
 
-/* .playnow, .joinnow {
-  box-sizing: border-box;
-  display: block;
-  width: 260px;
-  height: 82px;
-  border: 3px solid #000000;
-  border-radius: 10px;
-  margin: 0px 8px;
-  text-align: center;
-  font-family: Alfa Slab One;
-  font-style: normal;
-  font-weight: normal;
-  color: #ffffff;
-} */
-
-
-
 .create-game-btn:link, .create-game-btn:visited {
   height: 100%;
   text-align: center;
 
-  font-style: normal;
   color: white;
 }
 
@@ -97,6 +82,10 @@
   
 }
 
+/* =============================================================================== */
+/* Game Rooms Grid CSS */
+/* =============================================================================== */
+
 .gamerooms-container {
   max-height: 90vh;
   width: 70%;
@@ -118,19 +107,8 @@
 
   overflow-y: auto;
 }
-/* .games {
-  width: auto;
-  position: relative;
-  width: 359px;
-  height: 255px;
-  left: 10px;
-  top: 50px;
-  padding: 10px;
-  margin-right: 25px;
-  background: #c4c4c4;
-  border: 2px solid #000000;
-  box-sizing: border-box;
-} */
+
+
 .outerbox {
   display: grid;
 
@@ -139,20 +117,49 @@
 
   padding: 8px;
 
-  gap: 8px 8px;
+  gap: 24px 24px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 200px;
 }
+/* ----------------------------------------------------------------------------- */
+/* Game Card CSS */
+/* ----------------------------------------------------------------------------- */
 
 .box {
-  height: 200px;
-  background: darkslategrey;
-  border: 2px solid white;
-
   box-sizing: border-box;
+  display: block;
+
+  height: 200px;
+  
+  padding: 8px;
+
+  
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+
+
+  text-decoration: none;
+  color: white;
+  background-color: #58636e;
 }
 
+.box:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.box:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.open {
+  color: #208f5a;
+}
+
+
+/* =============================================================================== */
+/* Global Chat CSS */
+/* =============================================================================== */
 .chatroom {
   box-sizing: border-box;
   display: flex;
@@ -200,7 +207,6 @@
 
   flex-grow: 4;
 
-  /* background: rgba(177, 174, 189, 0.959); */
   box-sizing: border-box;
   
   overflow-y: auto;
@@ -218,7 +224,6 @@
   padding: 8px;
 
   font-size: 16px;
-  font-style: normal;
   font-weight: normal;
   color: white;
 
@@ -257,4 +262,8 @@
 
 .form-control {
   margin: 0;
+}
+
+.btn.bg-success {
+  color: white;
 }
