--- a/views/game_room.pug
+++ b/views/game_room.pug
@@ -16,150 +16,51 @@ block content
                             .container-fluid.w-100.h-100
                                 .row.w-100.h-100
                                     .col
-                                    .col-sm-6 
+                                    .col-sm-6.top-player-container
                                         #top-player.user-hand
                                             .my-card
                                                 img(src="images/unocards.png").face-down
                                             .my-card
                                                 img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
+                                        .username-container    
+                                            #top-player-username.username.bg-dark Username
                                     .col
                         .middle.row
-                            .col-sm
+                            .col-sm.center-player
+                                .username-container 
+                                    #left-player-username.username.bg-dark Username
                                 #left-player.user-hand.side-player
                                     .my-card
                                         img(src="images/unocards.png").face-down
                                     .my-card
                                         img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
-                                    .my-card
-                                        img(src="images/unocards.png").face-down
+                                    
                             .center.col-sm
                                 #game-center.container.h-100
                                     .row.justify-content-center.align-items-center.w-100.h-100
                                         .my-card
-                                            .face-up
-                                        .my-card
+                                            img(src="images/unocards.png").face-up
+                                        #draw-card.my-card
                                             img(src="images/unocards.png").face-down
-                            .col-sm 
+                            .col-sm.center-player
+                                .username-container 
+                                    #right-player-username.username.bg-dark Username
+                                #right-player.user-hand.side-player
+                                    .my-card
+                                         img(src="images/unocards.png").face-down
+                                    .my-card
+                                        img(src="images/unocards.png").face-down
                         .bottom.row
                             .container-fluid.w-100.h-100
                                 .row.w-100.h-100
-                                    .col
+                                    .col.username-container
+                                        #username.username.bg-dark Username
                                     .col-sm-6 
                                         #user-player.user-hand
                                             .my-card
-                                                img(src="images/unocards.png").face-down
+                                                img(src="images/unocards.png").face-up
                                             .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
-                                            .my-card
-                                                img(src="images/unocards.png").face-down
+                                                img(src="images/unocards.png").face-up
 
                                     .col 
                 .chat-sidebar.col-sm-3.flex-column.bg-dark
