Finished Basic Game Room CSS, Added Game Room Routing
- Finished Basic Game Room CSS so that backend can work with setting up
  Pusher
- Added the routing to the game room as well as inserting game user into
  the "Game User" table.
- In ActiveRecord.js, changed the create(data) function so that it
  surrounds column names in SQL query with "" because there were issues
  with syntax in Postgres
- Added "Rejoin" text to game cards in Dashboard

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -25,6 +25,7 @@ block content
                                 .num-players Players: #/4
                                 .open Open
                                 .close.text-danger Closed
+                                .rejoin.text-warning Rejoin
 
  
                  
