Implemented BaseDeck and GameDeck ORM/Controller
- Deleted copy of Abishek's term project repo within this repo
- Reimplemented BaseDeck and GameDeck ORMs to properly refer to the database
  as the one true data source.
- Implemented GameDeck controller to create GameDeck, shuffle GameDeck,
  and deal cards to Game Users.

NOTE: None of these implementations have been tested yet, will be tested
when logic for starting Game's is implemented.

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -22,9 +22,13 @@ block content
 
                             a(href="/game/" + game.id + "/join").box 
                                 .game-id Game #{game.id}
-                                .num-players Players: #/4
-                                .open Open
-                                .close.text-danger Closed
+                                .num-players Players: #{game.numPlayers}/4
+
+                                if game.numPlayers < 4
+                                    .open Open
+                                else if game.numPlayers >= 4
+                                    .close.text-danger Closed
+                                
                                 .rejoin.text-warning Rejoin
 
  
